--- a/screen.css
+++ b/screen.css
@@ -45,7 +45,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
 	font-family: sans-serif;
-	color: #2a2a2a;
+	color: #ff69b4;
 }
 
 a {
